src/objects/TeamMember__c.object
<CustomObject>
    <description>Team member object connects either internal staff or contractors to a project assignment.  If you further customize the application, you can prevent &quot;stray time reporting&quot; using apex coding so that team members cannot report time outside of the assigned date range.  This becomes important if your organization reports heavily on project costing or SOP-98 capital/expense.  in addition, Force.com Visualforce or Adobe Flex code can be leveraged to help with the matching of resources to projects/work requests.  Please contact professional services for more information on consulting rates or the Salesforce.com Developer network (www.salesforce.com/developer).</description>
    <fields>
        <fullName>Assignment_Description__c</fullName>
        <inlineHelpText>Please include any notes on the description of the role requested.  Does this role call for travel?  What is the priority?  Who will this team member report to?  What is the frequency of engagement summary reports?</inlineHelpText>
        <label>Assignment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to the contact record to track vendors working on projects.</inlineHelpText>
        <label>Contractor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>R00N80000002lXWQEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Durationweeks__c</fullName>
        <formula>( EndDate__c  -  StartDate__c  )  / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration (weeks) = (End Date - Start Date) / 7 days per week</inlineHelpText>
        <label>Duration (weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanedDeliverables__c</fullName>
        <label>Planned Deliverables</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>R00N80000002lXWNEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequestedAllocation__c</fullName>
        <inlineHelpText>What is the approximate percent of time required?  Assume 40hrs/week.</inlineHelpText>
        <label>Requested Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stake Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subject Matter Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UX Designer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the person gets status updates from the project</description>
        <inlineHelpText>Whether or not the person gets status updates from the project</inlineHelpText>
        <label>Status Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to the user and used to assign internal staff to a project team member.</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Team Memberships</relationshipLabel>
        <relationshipName>TeamMembership</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Role__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>RequestedAllocation__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <columns>Assignment_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusinessAnalystsActive</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>RequestedAllocation__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <columns>Assignment_Description__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EndDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Business Analyst</value>
        </filters>
        <label>Business Analysts - Active Assignments</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusinessAnalystsInactive</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>RequestedAllocation__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <columns>Assignment_Description__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EndDate__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Business Analyst</value>
        </filters>
        <label>Business Analysts - Inactive</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusinessAnalystsRequested</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <columns>Assignment_Description__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EndDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Business Analyst</value>
        </filters>
        <label>Business Analysts - Requested</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DevelopersManagersRequested</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <columns>Assignment_Description__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EndDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Developer</value>
        </filters>
        <label>Developers - Requested</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProjectManagersRequested</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <columns>Assignment_Description__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EndDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Project Manager</value>
        </filters>
        <label>Project Managers - Requested</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QARequested</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <columns>Assignment_Description__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EndDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>QA</value>
        </filters>
        <label>QA - Requested</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SalesforceAdministrators</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>RequestedAllocation__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>TeamMember__c</columns>
        <columns>Assignment_Description__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Salesforce Administrator</value>
        </filters>
        <label>Salesforce Administrators</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>